add health endpoint, update ci, update swagger
